syntax = "proto3";

package nucleus.node.v1;

message CreatePodRequest {
  string yaml = 1;
}

message CreatePodResponse {
  string id = 1;
  string proxy_addr = 2;
}

message PodId {
  string id = 1;
}

message PodLogsResponse {
  string logs = 1;
}

message CancelPodResponse {
  string status = 1;
}

message PodInfo {
  string id = 1;
  string name = 2;
  uint64 created_at_unix = 3;
  string state = 4;
  int32 exit_code = 5;
  string error = 6;
  string proxy_addr = 7;
}

message ListPodsResponse {
  repeated PodInfo pods = 1;
}

message Empty {}

// Streaming log entry for real-time log observation
message LogEntry {
  // Unix timestamp in milliseconds
  uint64 timestamp_ms = 1;
  // Log line content
  string line = 2;
  // Log level (info, warn, error, debug)
  string level = 3;
}

// Pod state change notification for observability
message PodStateChange {
  // Pod identifier
  string pod_id = 1;
  // Previous state (running, pending, etc.)
  string previous_state = 2;
  // New state
  string new_state = 3;
  // Unix timestamp of state change
  uint64 timestamp_unix = 4;
  // Exit code (only set when state is "exited")
  int32 exit_code = 5;
  // Error message (only set when state is "error")
  string error = 6;
}

// Request for streaming logs with optional offset
message StreamLogsRequest {
  // Pod identifier
  string pod_id = 1;
  // Start from this byte offset (0 = beginning)
  uint64 offset_bytes = 2;
  // Whether to follow the log (like tail -f)
  bool follow = 3;
}

// Request for watching pod state changes
message WatchPodRequest {
  // Pod identifier
  string pod_id = 1;
  // Include initial state in first message
  bool include_initial = 2;
}

// Get pod info request (single pod)
message GetPodRequest {
  string pod_id = 1;
}

// Get pod info response
message GetPodResponse {
  PodInfo pod = 1;
}

// Execution receipt â€” cryptographic proof of pod execution outcome.
// Built from the tool-proxy's exit report plus node-level metadata.
message ExecutionReceipt {
  string pod_id = 1;
  string workspace_hash = 2;
  string audit_tail_hash = 3;
  uint64 audit_entry_count = 4;
  uint64 timestamp_unix = 5;
  string manifest_hash = 6;
  string sandbox_tier = 7;
  string spiffe_id = 8;
}

message GetReceiptRequest {
  string pod_id = 1;
}

message GetReceiptResponse {
  ExecutionReceipt receipt = 1;
}

service NodeService {
  // Pod lifecycle management
  rpc CreatePod(CreatePodRequest) returns (CreatePodResponse);
  rpc ListPods(Empty) returns (ListPodsResponse);
  rpc GetPod(GetPodRequest) returns (GetPodResponse);
  rpc CancelPod(PodId) returns (CancelPodResponse);

  // Non-streaming logs (existing)
  rpc PodLogs(PodId) returns (PodLogsResponse);

  // Streaming observability for orchestrators
  rpc StreamPodLogs(StreamLogsRequest) returns (stream LogEntry);
  rpc WatchPodState(WatchPodRequest) returns (stream PodStateChange);

  // Execution receipt for auditing
  rpc GetReceipt(GetReceiptRequest) returns (GetReceiptResponse);
}
